--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: hsl(220, 13%, 18%);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -18,5 +18,5 @@
 }
 
 .App-link {
-  color: #09d3ac;
+  color: black;
 }
