--- a/src/App.scss
+++ b/src/App.scss
@@ -22,6 +22,7 @@ li {
   list-style: none;
 }
 
+
 //main layout styles
 .layout--top--navbar {
   height: 64px;
@@ -141,5 +142,36 @@ li {
 
   &:hover {
     background-color: $accent-highlight-color;
+  }
+}
+.addUser--modal{
+  .left-section{
+    background-color: #e74c3c;
+    color: #fff;
+  }
+  .left-section p {
+    font-size: 13px;
+  }
+  .add-user-img {
+    height: 30%;
+    width: 100%;
+  }
+
+  .add-button{
+    background-color: #f1c40f;
+    border: 0;
+    color: #fff;
+    &:hover{
+      background-color: #dab10d;
+    }
+  }
+
+  .cancel-button{
+    background-color: $accent-color;
+    border: 0;
+    color: #fff;
+    &:hover{
+      background-color: $accent-highlight-color;
+    }
   }
 }
